# playground

cmake/hw/: CMakeLists.txt
cmake/hw2/: CMakeLists.txt
cmake/hw4/: CMakeLists.txt  CMakeLists.txt.bak
cmake/hw4/include/: dfact.h
cpp/: binclean.sh
cpp/access_private/: hw.cpp  test.cpp
cpp/algorithm/: bound.cpp  max_element.cpp
cpp/any/: hw.cpp
cpp/arma/: hw.cpp  normpdf.cpp
cpp/bitset/: hw.cpp
cpp/chrono/: dur.cpp  manyclocks.cpp
cpp/cmath/: sqrt.cpp
cpp/concepts/: hw.cpp  linalg.cpp
cpp/conversion/: hw.cpp
cpp/crtp/: hw.cpp  two.cpp
cpp/distmat/: distributed_matrix.cpp
cpp/enum/: hw.cpp  hw2.cpp
cpp/factory/: hw.cpp
cpp/format/: hw.cpp
cpp/forward/: hw.cpp
cpp/fstream/: binary.cpp  hw.cpp  input.txt  mat.txt  matio.h  parse  parse.cpp  read_mat.cpp  snprintf.cpp  write.cpp  write.txt
cpp/functional/: bind.cpp  diff1.cpp  hw.cpp  return.cpp
cpp/hash/: hw.cpp
cpp/hw/: CMakeLists.txt  arma  arma.cpp  arma_tmp.cpp  arr.cpp  auto  auto.cpp  cpvec.cpp  foo.cpp  hw  hw.cpp  iterable  iterable.cpp  mpitype.cpp  newarr  newarr.cpp  optbase.cpp  show_bytes.cpp  sizeof.cpp  sp_pbe0.toml  sstream.cpp  stopwatch.cpp  x.sh
cpp/hw/cmake/: Dependencies.cmake
cpp/hw/src/: CMakeLists.txt  main.cpp
cpp/hw/src/main/: CMakeLists.txt  main.cpp
cpp/hw/src/para/: CMakeLists.txt  parallel_config.cpp  parallel_config.h
cpp/hw/src/util/: .CMakeLists.txt.swp  CMakeLists.txt  function_profiler.h  log.cpp  log.h  profiler_aggregator.cpp  profiler_aggregator.h  toml.cpp  toml.h
cpp/inheritance/: hw.cpp  interface.cpp  multi.cpp  typeid.cpp  virtual.cpp
cpp/iterator/: hw.cpp  reverse_iterator.cpp
cpp/linalg/: arma_bcast_addvec.cpp  arma_eig.cpp  arma_matmul.cpp  eig.cpp  eigs.cpp  logU.cpp  matmul.cpp  mpi_eig.cpp  omp_eig.cpp  zeyu.cpp  zheev.cpp  zheevd.cpp
cpp/macro/: debug.h  hw.cpp  line.cpp
cpp/map/: hw  hw.cpp
cpp/memleak/: example  hw  hw.cpp
cpp/move/: copy.cpp  hw.cpp  movestack.cpp  swap  swap.cpp  test.cpp
cpp/mpi/: arma.cpp  arma2.cpp  arr.cpp  arr2.cpp  aux.h  bcast.cpp  blacs  blacs.cpp  blacs_scatter_gather.cpp  create_struct.cpp  dgesd2d.cpp  func.cpp  gather.cpp  gatherv.cpp  helper.h  hw.cpp  hw2.cpp  id.cpp  mkl_aux.h  mkl_blacs.cpp  mkl_dgesd2d.cpp  mkl_hw.cpp  mkl_pdgemm.cpp  mpi_gather.cpp  mpiaux.h  pdgemm.cpp  pdgemv.c  pi.cpp  pi.sh  pi2.cpp  scalapack.h  scatter.cpp  string.cpp  types.cpp  wrapper.cpp
cpp/openmp/: hw.cpp
cpp/profiler/: function_profiler.h  main.cpp  profiler_aggregator.cpp  profiler_aggregator.h
cpp/range/: hw.cpp
cpp/regex/: hw.cpp
cpp/sfinae/: has_member.cpp  has_typedef.cpp  has_typedef_old.cpp  is_iterable.cpp  is_valid_call.cpp  keepcomplex.cpp
cpp/sgto_prod/: gaunt.cpp  xpan.cpp  (+1 more)
cuda/: add  check.h  clock.h  device_info.cu  grid_and_block.cu  hw  hw.cu
doxygen/: Doxyfile
python/: apns.py  center.py  hw.py  orbgen.py  qo.py
(+380 files in other folders)
